--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@thar.navaratnam/lotide",
   "version": "1.0.0",
   "description": "This is a smaller and simpler version of the Lodash library.",
-  "main": "assertArraysEqual.js",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
